# ocaml-alsa

./: .travis.yml  CHANGES  CHANGES.md  Makefile.in  README  README.md  alsa.opam  configure.ac  dune-project  index.html
.github/workflows/: ci.yml  doc.yml
alsa/: index.html
alsa/Alsa/: index.html
alsa/Alsa/Pcm/: index.html
alsa/Alsa/Sequencer/: index.html
alsa/Alsa/Sequencer/Event/: index.html
examples/: Makefile  recorder.ml
examples/devices/: Makefile  devices.ml  dune
examples/midi-output/: output.ml
examples/sequencer/: Makefile  sequencer.ml
examples/sine/: dune  sine.ml
src/: META.in  Makefile.in  OCamlMakefile  alsa.ml  alsa.mli  alsa_stubs.c
src/config/: discover.ml
