opam-version: "2.0"
name: "alsa"
version: "0.2.3"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-alsa"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "conf-pkg-config" {build}
]
depexts: [
  ["alsa-lib-dev"] {os-distribution = "alpine"}
  ["alsa-lib-devel"] {os-distribution = "centos"}
  ["alsa-lib-devel"] {os-distribution = "fedora"}
  ["alsa-lib-devel"] {os-family = "suse"}
  ["libasound2-dev"] {os-family = "debian"}
]
bug-reports: "https://github.com/savonet/ocaml-alsa/issues"
dev-repo: "git+https://github.com/savonet/ocaml-alsa.git"
available: [os = "linux"]
synopsis:
  "Bindings for the ALSA library which provides functions for using soundcards"
